@startuml zbd_schema_usa

' UPC - Int(14) - Universal Product Code
' ISRC - Char(12) - International Standard Recording Code
' Second - Int
entity Track {
    *id: Id
    *releaseId: Id
    --
    *title: Varchar
    *isrc: ISRC
    *duration: Second 
    *edit: Enum["original","radio","remix","cover","preview","instrumental"]
}

entity StreamingService {
    *id: Id
    --
    *name: Varchar
    *url: Varchar
}

entity TrackStream {
    *id: Id
    *trackId: Id
    *streamingServiceId: Id
    customerId: Id
    --
    *startedAt: Date
    *customerIp: Varchar
    *bandwith: Int
    *quality: Enum("flac","acc-128","mp3-320","waw")
    endedAt: Date
}

' USD - Int - number of cents (¢)

entity Release {
    *id: Id
    *musicLabelId: Id
    --
    *upc: UPC
    *name: Varchar
    *type: Enum["single","album","digital"]
    *originalPrice: USD
    *releaseDate: Date
    *cline: Varchar
    *pline: Varchar
}

entity MusicLabelStreamingServiceContract {
    *id: Id
    *musicLabelId: Id
    *streamingService: Id
    --
    *startDate: Date
    endDate: Date
}

entity MusicLabelArtistContract {
    *id: Id
    *musicLabelId: Id
    *artistId: Id
    --
    *startDate: Date
    endDate: Date
}

entity MusicLabel {
    *id: Id
    --
    *name: Varchar
    *creationDate: Year
    *creator: Varchar
}

' ISOISOCountryCode - ISO 3166-1 alfa-3 (e.g. Poland - POL)

entity Country {
    *id: Id
    --
    *name: Varchar
    *isoCode: ISOCountryCode
}

entity ReleaseStreamingRights {
    *releaseId: Id
    *countryId: Id
    --
}

entity Transaction {
    *id: Id
    *customerId: Id
    ---
    *provider: Enum("mastercard","visa","paypal","payu")
    *status: Enum("new","completed","cancelled","in-progress")
    *createdAt: ISODateTime
    customerIp: Varchar
    updatedAt: ISODateTime
    finishedAt: ISODateTime
}

entity ReleaseOrder {
    *id: Id
    *releaseId: Id
    *transationId: Id
    --
    *type: Enum("digital","streaming","e-shop","shop")
    *price: USD
    *placedAt: ISODateTime
}

entity ReleaseLike {
    *id: Id
    *customerId: Id
    *releaseId: Id
    ---
    *source: Enum("facebook","streaming-service","player","android-app","ios-app","other")
    customerIp: Varchar
    *addedAt: ISODateTime
}

entity TrackLike {
    *id: Id
    *customerId: Id
    *trackId: Id
    ---
    *source: Enum("facebook","streaming-service","player","android-app","ios-app","other")
    customerIp: Varchar
    *addedAt: ISODateTime
}

entity TrackArtist {
    *trackId: Id
    *artistId: Id
    --
}

entity Artist {
    *id: Id
    --
    *name: Varchar
    birth_date: Date
    gender: Enum("male","female")
}

entity Customer {
    *id: Id
    --
    *name: Varchar
    *email: Varchar
    *country: ISOCountryCode
    *passwordHash: Varchar
    *joinedAt: ISODateTime
    phone: Varchar
    city: Varchar
    adress: Varchar
}



' Track 1..n <-> 1..n Artist
Track "1" ||--|{ "1..n" TrackArtist:has >
Artist "1" ||--|{ "1..n" TrackArtist:has >

Release "1" ||--|{ "1..n" Track:has >

Release "1" ||--o{ "0..n" ReleaseLike:< added to
Track "1" ||--o{ "0..n" TrackLike:< added to

Customer "1" ||--o{ "0..n" TrackLike: can add >
Customer "1" ||--o{ "0..n" ReleaseLike: can add >

MusicLabel "1" ||-o{ "0..n" Release:owns >

' Release 1..n <-> 1..n Country (streaming rights)
Release "1" ||--|{ "1..n" ReleaseStreamingRights
Country "1" ||--|{ "1..n" ReleaseStreamingRights

Release "1" ||--o{ "0..n" ReleaseOrder:< placed to buy

Transaction "1" ||--|{ "1..n" ReleaseOrder:consists of >

Customer "0..1" |o--o{ "0..n" Transaction:can start >

Track "1" ||--o{ "0..n" TrackStream:listened >
TrackStream "0..n" }o--|| "1" StreamingService:streamed from >
TrackStream "0..n" }o--o| "0..1" Customer:streamed for >


Artist "1" ||--o{ "0..n" MusicLabelArtistContract:signs >
MusicLabel "1" ||--o{ "0..n" MusicLabelArtistContract:signs >


StreamingService "1" ||--o{ "0..n" MusicLabelStreamingServiceContract:signs >
MusicLabel "1" ||--o{ "0..n" MusicLabelStreamingServiceContract:signs >

@enduml



